# rag-chatbot-learning

./: .gitignore  CLAUDE.md  README.md  backend-tool-refactor.md  practice-notes.md  pyproject.toml
.claude/prompts/: refactor-multi-tool.md
backend/: ai_generator.py  app.py  document_processor.py  rag_system.py  search_tools.py
backend/tests/: __init__.py  conftest.py  test_ai_generator.py  test_api.py  test_integration.py  test_rag_system.py  test_search_tools.py
frontend/: index.html  script.js  style.css
prompts/: subagent-template.md
scripts/: format.sh  quality-check.sh
